# vqf

./: .gitignore  CMakeLists.txt  Makefile  Performance.gnumeric  README.md  main.cc
include/: ququ_filter.h  ququ_precompute.h  ququ_wrapper.h  shuffle_matrix.h  shuffle_matrix_512.h  vqf_filter.h  vqf_precompute.h  vqf_wrapper.h
pmdk/src/libpmem2/: Makefile  pmem2_utils.h
pmdk/src/test/obj_heap_state/: TEST2
scripts/: Performance.gnumeric
src/: bm.cc  generate_shuffle_matrix.cc  main.c  main.cc  main_id.cc  main_tx.cc  ququ_filter.c  shuffle_matrix_256.cc  shuffle_matrix_512.c  shuffle_matrix_512_16.c  shuffle_matrix_512_16_2.c  vqf_filter.c
